--- a/Lasersoftware.lfm
+++ b/Lasersoftware.lfm
@@ -3,8 +3,10 @@ object Form1: TForm1
   Height = 700
   Top = 92
   Width = 1014
-  ClientHeight = 700
+  ClientHeight = 678
   ClientWidth = 1014
+  Menu = MainMenu1
+  OnCreate = FormCreate
   LCLVersion = '1.3'
   object Panel2: TPanel
     Left = 0
@@ -14,14 +16,14 @@ object Form1: TForm1
     ClientHeight = 345
     ClientWidth = 273
     TabOrder = 1
-    object i1: TPaintBox
+    object iOutput: TPaintBox
       Left = 7
       Height = 257
       Top = 7
       Width = 257
-      OnMouseDown = i1MouseDown
-      OnMouseMove = i1MouseMove
-      OnPaint = i1Paint
+      OnMouseDown = iOutputMouseDown
+      OnMouseMove = iOutputMouseMove
+      OnPaint = iOutputPaint
     end
     object Panel55: TPanel
       Left = 6
@@ -63,29 +65,29 @@ object Form1: TForm1
   end
   object Panel7: TPanel
     Left = 1
-    Height = 297
-    Top = 392
+    Height = 313
+    Top = 384
     Width = 273
-    ClientHeight = 297
+    ClientHeight = 313
     ClientWidth = 273
     TabOrder = 3
-    object Button1: TButton
+    object bStart: TButton
       Left = 6
       Height = 33
       Top = 6
       Width = 121
       Caption = 'Start'
-      OnClick = Button1Click
+      OnClick = bStartClick
       TabOrder = 1
     end
-    object Button2: TButton
+    object bStop: TButton
       Left = 142
       Height = 33
       Top = 6
       Width = 123
       Caption = 'Stop'
       Enabled = False
-      OnClick = Button2Click
+      OnClick = bStopClick
       TabOrder = 0
     end
     object cb13: TCheckBox
@@ -143,7 +145,7 @@ object Form1: TForm1
       TabOrder = 7
     end
     object cb9: TCheckBox
-      Left = 70
+      Left = 78
       Height = 24
       Top = 122
       Width = 71
@@ -376,9 +378,9 @@ object Form1: TForm1
       TabOrder = 28
     end
     object rb14: TRadioButton
-      Left = 206
+      Left = 207
       Height = 24
-      Top = 94
+      Top = 96
       Width = 58
       Caption = 'White'
       OnClick = rb14Click
@@ -1031,8 +1033,8 @@ object Form1: TForm1
       Height = 457
       Top = 146
       Width = 553
-      ActivePage = banks
-      TabIndex = 0
+      ActivePage = mp3
+      TabIndex = 1
       TabOrder = 14
       OnChange = pg2Change
       object banks: TTabSheet
@@ -1471,10 +1473,10 @@ object Form1: TForm1
           TabOrder = 19
         end
         object cb32: TCheckBox
-          Left = 304
-          Height = 17
+          Left = 300
+          Height = 24
           Top = 333
-          Width = 89
+          Width = 107
           Caption = 'Play after Cue'
           Checked = True
           State = cbChecked
@@ -1483,7 +1485,7 @@ object Form1: TForm1
         object lb1: TDBListBox
           Left = 360
           Height = 73
-          Top = 280
+          Top = 272
           Width = 177
           ItemHeight = 0
           TabOrder = 21
@@ -1515,145 +1517,145 @@ object Form1: TForm1
         ClientWidth = 545
         object Label10: TLabel
           Left = 74
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 3
-          Width = 24
+          Width = 27
           Caption = '" Q "'
           ParentColor = False
         end
         object Label11: TLabel
           Left = 258
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 3
-          Width = 27
+          Width = 29
           Caption = '" W "'
           ParentColor = False
         end
         object Label12: TLabel
           Left = 442
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 3
-          Width = 23
+          Width = 25
           Caption = '" E "'
           ParentColor = False
         end
         object Label13: TLabel
           Left = 74
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 43
-          Width = 24
+          Width = 26
           Caption = '" R "'
           ParentColor = False
         end
         object Label14: TLabel
           Left = 258
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 44
-          Width = 23
+          Width = 25
           Caption = '" T "'
           ParentColor = False
         end
         object Label42: TLabel
           Left = 78
-          Height = 13
+          Height = 14
           Top = 205
-          Width = 18
+          Width = 19
           Caption = '"H"'
           ParentColor = False
         end
         object Label21: TLabel
           Left = 262
-          Height = 13
+          Height = 14
           Top = 126
-          Width = 17
+          Width = 18
           Caption = '"A"'
           ParentColor = False
         end
         object Label15: TLabel
           Left = 442
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 44
-          Width = 23
+          Width = 26
           Caption = '" Z "'
           ParentColor = False
         end
         object Label16: TLabel
           Left = 74
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 84
-          Width = 24
+          Width = 26
           Caption = '" U "'
           ParentColor = False
         end
         object Label17: TLabel
           Left = 258
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 84
-          Width = 19
+          Width = 21
           Caption = '" I "'
           ParentColor = False
         end
         object Label18: TLabel
           Left = 441
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 84
-          Width = 24
+          Width = 27
           Caption = '" O "'
           ParentColor = False
         end
         object Label19: TLabel
           Left = 74
-          Height = 13
+          Height = 14
           Hint = 'Delay zwischen 2 Punkten'
           Top = 124
-          Width = 23
+          Width = 25
           Caption = '" P "'
           ParentColor = False
         end
         object Label45: TLabel
           Left = 82
-          Height = 13
+          Height = 14
           Top = 166
-          Width = 18
+          Width = 19
           Caption = '"D"'
           ParentColor = False
         end
         object Label44: TLabel
           Left = 261
-          Height = 13
+          Height = 14
           Top = 166
-          Width = 16
+          Width = 17
           Caption = '"F"'
           ParentColor = False
         end
         object Label43: TLabel
           Left = 446
-          Height = 13
+          Height = 14
           Top = 166
-          Width = 18
+          Width = 19
           Caption = '"G"'
           ParentColor = False
         end
         object Label41: TLabel
           Left = 264
-          Height = 13
+          Height = 14
           Top = 205
-          Width = 15
+          Width = 13
           Caption = '"J"'
           ParentColor = False
         end
         object Label40: TLabel
           Left = 445
-          Height = 13
+          Height = 14
           Top = 205
           Width = 17
           Caption = '"K"'
@@ -1661,7 +1663,7 @@ object Form1: TForm1
         end
         object Label39: TLabel
           Left = 80
-          Height = 13
+          Height = 14
           Top = 245
           Width = 16
           Caption = '"L"'
@@ -1669,7 +1671,7 @@ object Form1: TForm1
         end
         object Label38: TLabel
           Left = 264
-          Height = 13
+          Height = 14
           Top = 245
           Width = 17
           Caption = '"Y"'
@@ -1677,55 +1679,55 @@ object Form1: TForm1
         end
         object Label37: TLabel
           Left = 454
-          Height = 13
+          Height = 14
           Top = 245
-          Width = 17
+          Width = 18
           Caption = '"X"'
           ParentColor = False
         end
         object Label36: TLabel
           Left = 80
-          Height = 13
+          Height = 14
           Top = 285
-          Width = 17
+          Width = 18
           Caption = '"C"'
           ParentColor = False
         end
         object Label35: TLabel
           Left = 264
-          Height = 13
+          Height = 14
           Top = 285
-          Width = 17
+          Width = 18
           Caption = '"V"'
           ParentColor = False
         end
         object Label34: TLabel
           Left = 456
-          Height = 13
+          Height = 14
           Top = 285
-          Width = 17
+          Width = 18
           Caption = '"B"'
           ParentColor = False
         end
         object Label33: TLabel
           Left = 80
-          Height = 13
+          Height = 14
           Top = 325
-          Width = 18
+          Width = 19
           Caption = '"N"'
           ParentColor = False
         end
         object Label32: TLabel
           Left = 262
-          Height = 13
+          Height = 14
           Top = 323
-          Width = 19
+          Width = 20
           Caption = '"M"'
           ParentColor = False
         end
         object Label22: TLabel
           Left = 446
-          Height = 13
+          Height = 14
           Top = 126
           Width = 17
           Caption = '"S"'
@@ -1951,55 +1953,55 @@ object Form1: TForm1
         OnShow = midiShow
         object Label46: TLabel
           Left = 8
-          Height = 13
+          Height = 14
           Top = 48
-          Width = 141
+          Width = 166
           Caption = 'MIDI Statusbyte / Datenbytes'
           ParentColor = False
         end
         object Label47: TLabel
           Left = 8
-          Height = 13
+          Height = 14
           Top = 136
-          Width = 67
+          Width = 81
           Caption = 'Oberes Nibble'
           ParentColor = False
         end
         object Label48: TLabel
           Left = 8
-          Height = 13
+          Height = 14
           Top = 176
-          Width = 70
+          Width = 84
           Caption = 'Unteres Nibble'
           ParentColor = False
         end
         object Label49: TLabel
           Left = 8
-          Height = 13
+          Height = 14
           Top = 216
-          Width = 58
+          Width = 70
           Caption = 'Datenbyte 1'
           ParentColor = False
         end
         object Label50: TLabel
           Left = 8
-          Height = 13
+          Height = 14
           Top = 256
-          Width = 58
+          Width = 70
           Caption = 'Datenbyte 2'
           ParentColor = False
         end
         object Label51: TLabel
           Left = 192
-          Height = 13
+          Height = 14
           Top = 24
-          Width = 49
+          Width = 59
           Caption = 'Key-Offset'
           ParentColor = False
         end
         object ComboMidiIn: TComboBox
           Left = 8
-          Height = 21
+          Height = 27
           Top = 16
           Width = 145
           ItemHeight = 0
