--- a/Lasersoftware.lfm
+++ b/Lasersoftware.lfm
@@ -671,9 +671,9 @@ object Form1: TForm1
     end
   end
   object GroupBox1: TGroupBox
-    Left = 280
+    Left = 278
     Height = 625
-    Top = 72
+    Top = 66
     Width = 569
     Caption = 'Settings'
     ClientHeight = 609
@@ -1194,7 +1194,7 @@ object Form1: TForm1
             Left = 126
             Height = 97
             Top = 42
-            Width = 33
+            Width = 34
             Frequency = 10
             Max = 100
             Min = 1
@@ -1207,7 +1207,7 @@ object Form1: TForm1
             Left = 86
             Height = 97
             Top = 42
-            Width = 33
+            Width = 34
             Frequency = 10
             Max = 100
             Min = 1
@@ -1220,7 +1220,7 @@ object Form1: TForm1
             Left = 46
             Height = 97
             Top = 42
-            Width = 33
+            Width = 34
             Frequency = 100
             Max = 1000
             Min = 1
@@ -1233,7 +1233,7 @@ object Form1: TForm1
             Left = 6
             Height = 97
             Top = 42
-            Width = 33
+            Width = 34
             Frequency = 100
             Max = 1000
             Min = 1
@@ -1276,20 +1276,20 @@ object Form1: TForm1
           end
         end
         object Button30: TButton
-          Left = 376
+          Left = 326
           Height = 25
           Top = 24
-          Width = 75
-          Caption = 'Button30'
+          Width = 125
+          Caption = 'DMX aus'
           OnClick = Button30Click
           TabOrder = 2
         end
         object Button31: TButton
-          Left = 376
+          Left = 326
           Height = 25
           Top = 64
-          Width = 75
-          Caption = 'Button31'
+          Width = 125
+          Caption = 'DMX an'
           OnClick = Button31Click
           TabOrder = 3
         end
@@ -1476,9 +1476,9 @@ object Form1: TForm1
         end
         object cb32: TCheckBox
           Left = 300
-          Height = 24
+          Height = 17
           Top = 333
-          Width = 107
+          Width = 89
           Caption = 'Play after Cue'
           Checked = True
           State = cbChecked
@@ -1519,137 +1519,137 @@ object Form1: TForm1
         ClientWidth = 545
         object Label10: TLabel
           Left = 74
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 3
-          Width = 27
+          Width = 22
           Caption = '" Q "'
           ParentColor = False
         end
         object Label11: TLabel
           Left = 258
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 3
-          Width = 29
+          Width = 24
           Caption = '" W "'
           ParentColor = False
         end
         object Label12: TLabel
           Left = 442
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 3
-          Width = 25
+          Width = 20
           Caption = '" E "'
           ParentColor = False
         end
         object Label13: TLabel
           Left = 74
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 43
-          Width = 26
+          Width = 21
           Caption = '" R "'
           ParentColor = False
         end
         object Label14: TLabel
           Left = 258
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 44
-          Width = 25
+          Width = 20
           Caption = '" T "'
           ParentColor = False
         end
         object Label42: TLabel
           Left = 78
-          Height = 14
+          Height = 13
           Top = 205
-          Width = 19
+          Width = 15
           Caption = '"H"'
           ParentColor = False
         end
         object Label21: TLabel
           Left = 262
-          Height = 14
+          Height = 13
           Top = 126
-          Width = 18
+          Width = 15
           Caption = '"A"'
           ParentColor = False
         end
         object Label15: TLabel
           Left = 442
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 44
-          Width = 26
+          Width = 20
           Caption = '" Z "'
           ParentColor = False
         end
         object Label16: TLabel
           Left = 74
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 84
-          Width = 26
+          Width = 21
           Caption = '" U "'
           ParentColor = False
         end
         object Label17: TLabel
           Left = 258
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 84
-          Width = 21
+          Width = 18
           Caption = '" I "'
           ParentColor = False
         end
         object Label18: TLabel
           Left = 441
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 84
-          Width = 27
+          Width = 22
           Caption = '" O "'
           ParentColor = False
         end
         object Label19: TLabel
           Left = 74
-          Height = 14
+          Height = 13
           Hint = 'Delay zwischen 2 Punkten'
           Top = 124
-          Width = 25
+          Width = 20
           Caption = '" P "'
           ParentColor = False
         end
         object Label45: TLabel
           Left = 82
-          Height = 14
+          Height = 13
           Top = 166
-          Width = 19
+          Width = 15
           Caption = '"D"'
           ParentColor = False
         end
         object Label44: TLabel
           Left = 261
-          Height = 14
+          Height = 13
           Top = 166
-          Width = 17
+          Width = 14
           Caption = '"F"'
           ParentColor = False
         end
         object Label43: TLabel
           Left = 446
-          Height = 14
+          Height = 13
           Top = 166
-          Width = 19
+          Width = 15
           Caption = '"G"'
           ParentColor = False
         end
         object Label41: TLabel
           Left = 264
-          Height = 14
+          Height = 13
           Top = 205
           Width = 13
           Caption = '"J"'
@@ -1657,81 +1657,81 @@ object Form1: TForm1
         end
         object Label40: TLabel
           Left = 445
-          Height = 14
+          Height = 13
           Top = 205
-          Width = 17
+          Width = 14
           Caption = '"K"'
           ParentColor = False
         end
         object Label39: TLabel
           Left = 80
-          Height = 14
+          Height = 13
           Top = 245
-          Width = 16
+          Width = 13
           Caption = '"L"'
           ParentColor = False
         end
         object Label38: TLabel
           Left = 264
-          Height = 14
+          Height = 13
           Top = 245
-          Width = 17
+          Width = 14
           Caption = '"Y"'
           ParentColor = False
         end
         object Label37: TLabel
           Left = 454
-          Height = 14
+          Height = 13
           Top = 245
-          Width = 18
+          Width = 14
           Caption = '"X"'
           ParentColor = False
         end
         object Label36: TLabel
           Left = 80
-          Height = 14
+          Height = 13
           Top = 285
-          Width = 18
+          Width = 15
           Caption = '"C"'
           ParentColor = False
         end
         object Label35: TLabel
           Left = 264
-          Height = 14
+          Height = 13
           Top = 285
-          Width = 18
+          Width = 14
           Caption = '"V"'
           ParentColor = False
         end
         object Label34: TLabel
           Left = 456
-          Height = 14
+          Height = 13
           Top = 285
-          Width = 18
+          Width = 14
           Caption = '"B"'
           ParentColor = False
         end
         object Label33: TLabel
           Left = 80
-          Height = 14
+          Height = 13
           Top = 325
-          Width = 19
+          Width = 15
           Caption = '"N"'
           ParentColor = False
         end
         object Label32: TLabel
           Left = 262
-          Height = 14
+          Height = 13
           Top = 323
-          Width = 20
+          Width = 16
           Caption = '"M"'
           ParentColor = False
         end
         object Label22: TLabel
           Left = 446
-          Height = 14
+          Height = 13
           Top = 126
-          Width = 17
+          Width = 14
           Caption = '"S"'
           ParentColor = False
         end
@@ -1955,55 +1955,55 @@ object Form1: TForm1
         OnShow = midiShow
         object Label46: TLabel
           Left = 8
-          Height = 14
+          Height = 13
           Top = 48
-          Width = 166
+          Width = 145
           Caption = 'MIDI Statusbyte / Datenbytes'
           ParentColor = False
         end
         object Label47: TLabel
           Left = 8
-          Height = 14
+          Height = 13
           Top = 136
-          Width = 81
+          Width = 67
           Caption = 'Oberes Nibble'
           ParentColor = False
         end
         object Label48: TLabel
           Left = 8
-          Height = 14
+          Height = 13
           Top = 176
-          Width = 84
+          Width = 70
           Caption = 'Unteres Nibble'
           ParentColor = False
         end
         object Label49: TLabel
           Left = 8
-          Height = 14
+          Height = 13
           Top = 216
-          Width = 70
+          Width = 60
           Caption = 'Datenbyte 1'
           ParentColor = False
         end
         object Label50: TLabel
           Left = 8
-          Height = 14
+          Height = 13
           Top = 256
-          Width = 70
+          Width = 60
           Caption = 'Datenbyte 2'
           ParentColor = False
         end
         object Label51: TLabel
           Left = 192
-          Height = 14
+          Height = 13
           Top = 24
-          Width = 59
+          Width = 53
           Caption = 'Key-Offset'
           ParentColor = False
         end
         object ComboMidiIn: TComboBox
           Left = 8
-          Height = 27
+          Height = 21
           Top = 16
           Width = 145
           ItemHeight = 0
@@ -2088,7 +2088,7 @@ object Form1: TForm1
       Height = 102
       Hint = 'Mastergain'
       Top = 21
-      Width = 30
+      Width = 33
       Frequency = 10
       Max = 100
       Min = 1
@@ -2112,7 +2112,7 @@ object Form1: TForm1
       Height = 102
       Hint = 'Pumping Output'
       Top = 21
-      Width = 35
+      Width = 33
       Frequency = 2
       Max = 30
       OnChange = sb17Change
@@ -2135,7 +2135,7 @@ object Form1: TForm1
       Height = 102
       Hint = 'Max. Rotate - Arc'
       Top = 21
-      Width = 35
+      Width = 33
       Frequency = 36
       Max = 360
       OnChange = tb2Change
@@ -2300,20 +2300,20 @@ object Form1: TForm1
     Enabled = False
     Interval = 5000
     OnTimer = Timer3Timer
-    left = 808
-    top = 88
+    left = 816
+    top = 144
   end
   object Timer4: TTimer
     Enabled = False
     Interval = 3000
     OnTimer = Timer4Timer
-    left = 744
-    top = 88
+    left = 736
+    top = 144
   end
   object Timer5: TTimer
     Enabled = False
     OnTimer = Timer5Timer
     left = 776
-    top = 88
+    top = 144
   end
 end
